...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_capture"
            android:drawablePadding="8dp"
            android:paddingTop="16dp"
            android:text="Capture"
            android:textColor="@color/signature" />
    </LinearLayout>
    <!--

    <RelativeLayout
        android:layout_width="match_parent"
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_record_media"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/CardLinkMedium"
            android:text="@string/lbl_record"/>

    </LinearLayout> -->
...
