<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liger</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_level">Level:</string>
    <string name="lbl_time">Time:</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_next_up">Next up:</string>
    <string name="lbl_congrats_or">--- or ---</string>

    <string name="lbl_video">Video</string>
    <string name="lbl_audio">Audio</string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_record">Record Clip</string>
    <string name="lbl_order_media_desc">Now put your clips in order to present clear beginning, middle, and end.</string>

    <string-array name="clipcard_overflow">
        <item>Change Goal</item>
        <item>Duplicate Card</item>
        <item>Duplicate Clip</item>
        <item>Remove Card</item>
    </string-array>

</resources>
