<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <!-- breadCrumb is the persistent card header. While the quiz response options are expanded it represents
    the quiz prompt. e.g : "What is your story about?". After quiz response selection it transforms to the
    selected response. e.g: "An Event" -->

    <TextView
        android:id="@+id/breadCrumb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_medium"
        android:textColor="@color/storymaker_highlight"
        android:textSize="@dimen/text_medium"/>

    <!-- choiceContainer contains all quiz response options -->

    <LinearLayout
        android:id="@+id/choiceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
</LinearLayout>